--- a/style_2.css
+++ b/style_2.css
@@ -280,7 +280,7 @@ h6 {
 .box-1 {
     display: flex;
     justify-content: space-around;
-    margin: 50px;
+    margin-top: 50px;
     flex-wrap: wrap;
 }
 
@@ -526,6 +526,7 @@ footer {
         display: block;
         font-size: 20px;
     }
+
 
 
 }
